Fix for white space issue on rtl pages.

--- a/hello-theme-child-master/style.css
+++ b/hello-theme-child-master/style.css
@@ -39,4 +39,12 @@ Tags:           flexible-header, custom-colors, custom-menu, custom-logo, editor
 	z-index: 1004!important;
 }
 
+/* Added 12/21/2020 Fix for white space issue */
+[dir="rtl"] .elementor-motion-effects-parent{
+	right: 0!important;
+	left:0!important;
+	overflow-x: hidden;
+	max-width:100vw;
+}
+
 /* By Juliana Gonzalez ----------- End ------------- */
